[package]
name = "gpu_bandwidth"
version = "0.1.0"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
simplelog = "0.7.6"
log = "0.4"
bytemuck = "1"
futures = "0.3"
prettytable-rs = "0.8.0"
clap = "2.33.0"
pbr = "1.0.2"