[package]
name = "ufe_abe"
version = "0.0.4"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "A tool to measure the data bandwidth betweeen RAM and GPU"
readme = "README.md"
homepage = "https://github.com/niederb/ufe_abe"
repository = "https://github.com/niederb/ufe_abe"
keywords = ["cli", "gpu", "bandwidth", "gpgpu", "webgpu"]
categories = ["command-line-utilities"]

[dependencies]
#wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "master" }
wgpu = "0.13"
futures = "0.3"
prettytable-rs = "0.8"
structopt = "0.3"
pbr = "1.0"
simplelog = "0.12"
log = "0.4"
bytemuck = { version = "1.4", features = ["derive"] }
futures-intrusive = "0.4"